--- a/pages/test-keyboard/index.html
+++ b/pages/test-keyboard/index.html
@@ -20,6 +20,13 @@
   <!-- endinject -->
   <link rel="shortcut icon" href="../../images/favicon.png" />
   <link href="https://tools.cevta.tk/apps/test-keyboard/keyboard.css" id="app-style" rel="stylesheet" type="text/css" />
+	
+
+
+
+<link rel="preload" href="https://cdn.jsdelivr.net/gh/vietrick/apps@latest/assets/css/argon.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+<noscript><link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/vietrick/apps@latest/assets/css/argon.min.css"></noscript>
+	
 </head>
 
 <body>
