--- a/index.html
+++ b/index.html
@@ -337,58 +337,58 @@
 		
 		          <li class="nav-item">
             <a class="nav-link" href="pages/documentation/documentation.html">
-              <i class="icon-paper menu-icon"></i>
-              <span class="menu-title">Documentation</span>
+              <i class="fas fa-calculator-alt menu-icon"></i>
+              <span class="menu-title">Calculator</span>
             </a>
           </li>
 		
 		          <li class="nav-item">
             <a class="nav-link" href="pages/documentation/documentation.html">
-              <i class="icon-paper menu-icon"></i>
-              <span class="menu-title">Documentation</span>
+              <i class="fad fa-network-wired menu-icon"></i>
+              <span class="menu-title">Network</span>
             </a>
           </li>
 		
 		          <li class="nav-item">
             <a class="nav-link" href="pages/documentation/documentation.html">
-              <i class="icon-paper menu-icon"></i>
-              <span class="menu-title">Documentation</span>
+              <i class="fad fa-sync-alt menu-icon"></i>
+              <span class="menu-title">Convert</span>
             </a>
           </li>
 		
 		          <li class="nav-item">
             <a class="nav-link" href="pages/documentation/documentation.html">
-              <i class="icon-paper menu-icon"></i>
-              <span class="menu-title">Documentation</span>
+              <i class="fad fa-blog menu-icon"></i>
+              <span class="menu-title">Blogger</span>
             </a>
           </li>
 		
 		          <li class="nav-item">
             <a class="nav-link" href="pages/documentation/documentation.html">
-              <i class="icon-paper menu-icon"></i>
-              <span class="menu-title">Documentation</span>
+              <i class="fad fa-code menu-icon"></i>
+              <span class="menu-title">Code</span>
             </a>
           </li>
 		
 		          <li class="nav-item">
             <a class="nav-link" href="pages/documentation/documentation.html">
-              <i class="icon-paper menu-icon"></i>
-              <span class="menu-title">Documentation</span>
+              <i class="fad fa-download menu-ico"></i>
+              <span class="menu-title">Download</span>
             </a>
           </li>
 		
 		          <li class="nav-item">
             <a class="nav-link" href="pages/documentation/documentation.html">
-              <i class="icon-paper menu-icon"></i>
-              <span class="menu-title">Documentation</span>
+              <i class="fad fa-address-card menu-icon"></i>
+              <span class="menu-title">Profile</span>
             </a>
           </li>
 
 
           <li class="nav-item">
             <a class="nav-link" href="pages/documentation/documentation.html">
-              <i class="icon-paper menu-icon"></i>
-              <span class="menu-title">Documentation</span>
+              <i class="fad fa-shield menu-icon"></i>
+              <span class="menu-title">Privacy</span>
             </a>
           </li>
         </ul>
