--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
 		
 		          <li class="nav-item">
             <a class="nav-link" href="pages/documentation/documentation.html">
-              <i class="fad fa-download menu-ico"></i>
+              <i class="fad fa-download menu-icon"></i>
               <span class="menu-title">Download</span>
             </a>
           </li>
