--- a/pages/git2jsdelivr/index.html
+++ b/pages/git2jsdelivr/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 
 <head>
+		    <link rel="stylesheet" href="https://cdn.leanhduc.pro.vn/font-awesome/pro-5.15.3/css/all.css" /
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
