--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
     <!-- partial:partials/_navbar.html -->
     <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
       <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
-        <a class="navbar-brand brand-logo mr-5" href="index.html"><img src="images/logo.svg" class="mr-2" alt="logo"/></a>
-        <a class="navbar-brand brand-logo-mini" href="index.html"><img src="images/logo-mini.svg" alt="logo"/></a>
+<a routerlink="/" class="navbar-brand brand-logo mr-5" href="/"> 
+	<div class="title_codepro">C<i class="fad fa-brackets-curly logo_codepro rung"></i>DE PRO</div>
+	      </a><a routerlink="/" class="navbar-brand brand-logo-mini" href="/"><i class="fad fa-brackets-curly logo_codepro_mini rung"></i></a>
       </div>
       <div class="navbar-menu-wrapper d-flex align-items-center justify-content-end">
         <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
