--- a/index.html
+++ b/index.html
@@ -7,6 +7,17 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <title>Cevta - Online web tools</title>
+
+  <meta content="@_cevta" name="twitter:site">
+  <meta content="@_cevta" name="twitter:creator">
+  <meta content="Ngô Vi Minh Hiếu" name="Author">
+  <meta content="Cevta" name="copyright">
+  <meta content="Online web tools - Free webmaster tools!" name="description">
+  <meta content="cevta, free web online tools, online web tools, online free web tools, free webmaster tools, seo tools, internet tools, code beautify, code minify, code formatter" name="keywords">
+  <meta content="Online web tools - Free webmaster tools!" property="og:image:alt">
+  
+	
+	
   <!-- plugins:css -->
   <link rel="stylesheet" href="vendors/feather/feather.css">
   <link rel="stylesheet" href="vendors/ti-icons/css/themify-icons.css">
