--- a/index.html
+++ b/index.html
@@ -331,56 +331,56 @@
           </li>
 		
           <li class="nav-item">
-            <a class="nav-link" href="pages/documentation/documentation.html">
+            <a class="nav-link" href="/seo">
               <i class="fad fa-search-dollar menu-icon"></i>
               <span class="menu-title">SEO master</span>
             </a>
           </li>
 		
 		          <li class="nav-item">
-            <a class="nav-link" href="pages/documentation/documentation.html">
+            <a class="nav-link" href="/calculator">
               <i class="fas fa-calculator-alt menu-icon"></i>
               <span class="menu-title">Calculator</span>
             </a>
           </li>
 		
 		          <li class="nav-item">
-            <a class="nav-link" href="pages/documentation/documentation.html">
+            <a class="nav-link" href="/network">
               <i class="fad fa-network-wired menu-icon"></i>
               <span class="menu-title">Network</span>
             </a>
           </li>
 		
 		          <li class="nav-item">
-            <a class="nav-link" href="pages/documentation/documentation.html">
+            <a class="nav-link" href="/convert">
               <i class="fad fa-sync-alt menu-icon"></i>
               <span class="menu-title">Convert</span>
             </a>
           </li>
 		
 		          <li class="nav-item">
-            <a class="nav-link" href="pages/documentation/documentation.html">
+            <a class="nav-link" href="/blogger">
               <i class="fad fa-blog menu-icon"></i>
               <span class="menu-title">Blogger</span>
             </a>
           </li>
 		
 		          <li class="nav-item">
-            <a class="nav-link" href="pages/documentation/documentation.html">
+            <a class="nav-link" href="/code">
               <i class="fad fa-code menu-icon"></i>
               <span class="menu-title">Code</span>
             </a>
           </li>
 		
 		          <li class="nav-item">
-            <a class="nav-link" href="pages/documentation/documentation.html">
+            <a class="nav-link" href="/download">
               <i class="fad fa-download menu-icon"></i>
               <span class="menu-title">Download</span>
             </a>
           </li>
 		
 		          <li class="nav-item">
-            <a class="nav-link" href="pages/documentation/documentation.html">
+            <a class="nav-link" href="/profile">
               <i class="fad fa-address-card menu-icon"></i>
               <span class="menu-title">Profile</span>
             </a>
@@ -388,7 +388,7 @@
 
 
           <li class="nav-item">
-            <a class="nav-link" href="pages/documentation/documentation.html">
+            <a class="nav-link" href="/privacy">
               <i class="fad fa-shield menu-icon"></i>
               <span class="menu-title">Privacy</span>
             </a>
