--- a/convert/github-to-jsdelivr/index.html
+++ b/convert/github-to-jsdelivr/index.html
@@ -295,104 +295,94 @@
       <!-- partial -->
       <!-- partial:../../partials/_sidebar.html -->
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
- <ul class="nav">
-          <li class="nav-item">
-            <a class="nav-link" href="index.html">
-              <i class="fad fa-tachometer-alt menu-icon"></i>
-              <span class="menu-title">Dashboard</span>
-            </a>
-          </li>
-		          <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
-              <i class="fad fa-user menu-icon"></i>
-              <span class="menu-title">User Pages</span>
-              <i class="menu-arrow"></i>
-            </a>
-            <div class="collapse" id="auth">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>
-                <li class="nav-item"> <a class="nav-link" href="pages/samples/register.html"> Register </a></li>
-              </ul>
-            </div>
-          </li>
-		          <li class="nav-item">
-            <a class="nav-link" data-toggle="collapse" href="#error" aria-expanded="false" aria-controls="error">
-              <i class="icon-ban menu-icon"></i>
-              <span class="menu-title">Error pages</span>
-              <i class="menu-arrow"></i>
-            </a>
-            <div class="collapse" id="error">
-              <ul class="nav flex-column sub-menu">
-                <li class="nav-item"> <a class="nav-link" href="pages/samples/error-404.html"> 404 </a></li>
-                <li class="nav-item"> <a class="nav-link" href="pages/samples/error-500.html"> 500 </a></li>
-              </ul>
-            </div>
-          </li>
-		
-          <li class="nav-item">
-            <a class="nav-link" href="pages/documentation/documentation.html">
-              <i class="fad fa-search-dollar menu-icon"></i>
-              <span class="menu-title">SEO master</span>
-            </a>
-          </li>
-		
-		          <li class="nav-item">
-            <a class="nav-link" href="pages/documentation/documentation.html">
-              <i class="fas fa-calculator-alt menu-icon"></i>
-              <span class="menu-title">Calculator</span>
-            </a>
-          </li>
-		
-		          <li class="nav-item">
-            <a class="nav-link" href="pages/documentation/documentation.html">
-              <i class="fad fa-network-wired menu-icon"></i>
-              <span class="menu-title">Network</span>
-            </a>
-          </li>
-		
-		          <li class="nav-item">
-            <a class="nav-link" href="pages/documentation/documentation.html">
-              <i class="fad fa-sync-alt menu-icon"></i>
-              <span class="menu-title">Convert</span>
-            </a>
-          </li>
-		
-		          <li class="nav-item">
-            <a class="nav-link" href="pages/documentation/documentation.html">
-              <i class="fad fa-blog menu-icon"></i>
-              <span class="menu-title">Blogger</span>
-            </a>
-          </li>
-		
-		          <li class="nav-item">
-            <a class="nav-link" href="pages/documentation/documentation.html">
-              <i class="fad fa-code menu-icon"></i>
-              <span class="menu-title">Code</span>
-            </a>
-          </li>
-		
-		          <li class="nav-item">
-            <a class="nav-link" href="pages/documentation/documentation.html">
-              <i class="fad fa-download menu-icon"></i>
-              <span class="menu-title">Download</span>
-            </a>
-          </li>
-		
-		          <li class="nav-item">
-            <a class="nav-link" href="pages/documentation/documentation.html">
-              <i class="fad fa-address-card menu-icon"></i>
-              <span class="menu-title">Profile</span>
-            </a>
-          </li>
-
-
-          <li class="nav-item">
-            <a class="nav-link" href="pages/documentation/documentation.html">
-              <i class="fad fa-shield menu-icon"></i>
-              <span class="menu-title">Privacy</span>
-            </a>
-          </li>
-        </ul>
+<ul class="nav">
+<li class="nav-item">
+<a class="nav-link" href="index.html">
+<i class="fad fa-tachometer-alt menu-icon"></i>
+<span class="menu-title">Dashboard</span>
+</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" data-toggle="collapse" href="#auth" aria-expanded="false" aria-controls="auth">
+<i class="fad fa-user menu-icon"></i>
+<span class="menu-title">User Pages</span>
+<i class="menu-arrow"></i>
+</a>
+<div class="collapse" id="auth">
+<ul class="nav flex-column sub-menu">
+<li class="nav-item"> <a class="nav-link" href="pages/samples/login.html"> Login </a></li>
+<li class="nav-item"> <a class="nav-link" href="pages/samples/register.html"> Register </a></li>
+</ul>
+</div>
+</li>
+<li class="nav-item">
+<a class="nav-link" data-toggle="collapse" href="#error" aria-expanded="false" aria-controls="error">
+<i class="icon-ban menu-icon"></i>
+<span class="menu-title">Error pages</span>
+<i class="menu-arrow"></i>
+</a>
+<div class="collapse" id="error">
+<ul class="nav flex-column sub-menu">
+<li class="nav-item"> <a class="nav-link" href="pages/samples/error-404.html"> 404 </a></li>
+<li class="nav-item"> <a class="nav-link" href="pages/samples/error-500.html"> 500 </a></li>
+</ul>
+</div>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="/seo">
+<i class="fad fa-search-dollar menu-icon"></i>
+<span class="menu-title">SEO master</span>
+</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="/calculator">
+<i class="fas fa-calculator-alt menu-icon"></i>
+<span class="menu-title">Calculator</span>
+</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="/network">
+<i class="fad fa-network-wired menu-icon"></i>
+<span class="menu-title">Network</span>
+</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="/convert">
+<i class="fad fa-sync-alt menu-icon"></i>
+<span class="menu-title">Convert</span>
+</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="/blogger">
+<i class="fad fa-blog menu-icon"></i>
+<span class="menu-title">Blogger</span>
+</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="/code">
+<i class="fad fa-code menu-icon"></i>
+<span class="menu-title">Code</span>
+</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="/download">
+<i class="fad fa-download menu-icon"></i>
+<span class="menu-title">Download</span>
+</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="/profile">
+<i class="fad fa-address-card menu-icon"></i>
+<span class="menu-title">Profile</span>
+</a>
+</li>
+<li class="nav-item">
+<a class="nav-link" href="/privacy">
+<i class="fad fa-shield menu-icon"></i>
+<span class="menu-title">Privacy</span>
+</a>
+</li>
+</ul>
       </nav>
       <!-- partial -->
       <div class="main-panel">        
