--- a/convert/index.html
+++ b/convert/index.html
@@ -398,10 +398,10 @@
 <div class="dropdown-menu" aria-labelledby="dropdownMenuSplitButton1">
 <h6 class="dropdown-header">Tools</h6>
 <a class="dropdown-item" href="/convert/github-to-jsdelivr/">GitHub to jsDelivr</a>
-<a class="dropdown-item" href="#">Another action</a>
-<a class="dropdown-item" href="#">Something else here</a>
+<a class="dropdown-item" href="#">Update</a>
+<a class="dropdown-item" href="#">Update</a>
 <div class="dropdown-divider"></div>
-<a class="dropdown-item" href="#">Separated link</a>
+<a class="dropdown-item" href="#">Update</a>
 </div>
 
                 
