--- a/seo/index.html
+++ b/seo/index.html
@@ -297,7 +297,7 @@
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
 <ul class="nav">
 <li class="nav-item">
-<a class="nav-link" href="index.html">
+<a class="nav-link" href="/">
 <i class="fad fa-tachometer-alt menu-icon"></i>
 <span class="menu-title">Dashboard</span>
 </a>
