--- a/convert/index.html
+++ b/convert/index.html
@@ -388,25 +388,27 @@
       <div class="main-panel">        
         <div class="content-wrapper">
           <div class="row">
-            <div class="col-lg-12 grid-margin">
+            <div class="col-12 grid-margin stretch-card">
               <div class="card">
-                <div class="card-body">
-<button type="button" class="btn btn-primary">Dropdown</button>
-<button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" id="dropdownMenuSplitButton1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-<span class="sr-only">Toggle Dropdown</span>
-</button>
-<div class="dropdown-menu" aria-labelledby="dropdownMenuSplitButton1">
-<h6 class="dropdown-header">Tools</h6>
-<a class="dropdown-item" href="/convert/github-to-jsdelivr/">GitHub to jsDelivr</a>
-<a class="dropdown-item" href="#">Update</a>
-<a class="dropdown-item" href="#">Update</a>
-<div class="dropdown-divider"></div>
-<a class="dropdown-item" href="#">Update</a>
-</div>
+                <div class="row">
+                  <div class="col-md-6">
+                    <div class="card-body">
+                      <h4 class="card-title">Single color buttons</h4>
+                      <p class="card-description">Add class <code>.btn-{color}</code> for buttons in theme colors</p>
+                      <div class="template-demo">
+                        <button type="button" class="btn btn-primary">Primary</button>
+                        <button type="button" class="btn btn-secondary">Secondary</button>
+                        <button type="button" class="btn btn-success">Success</button>
+                        <button type="button" class="btn btn-danger">Danger</button>
+                        <button type="button" class="btn btn-warning">Warning</button>
+                        <button type="button" class="btn btn-info">Info</button>
+                        <button type="button" class="btn btn-light">Light</button>
+                        <button type="button" class="btn btn-dark">Dark</button>
+                        <button type="button" class="btn btn-link">Link</button>
+                      </div>
+                    </div>
+                  </div>
 
-                
-                </div>
-              </div>
             </div>
           </div>
         </div>
