--- a/convert/index.html
+++ b/convert/index.html
@@ -397,8 +397,8 @@
                 <div class="row">
                   <div class="col-md-6">
                     <div class="card-body">
-                      <h4 class="card-title">Single color buttons</h4>
-                      <p class="card-description">Add class <code>.btn-{color}</code> for buttons in theme colors</p>
+                      <h4 class="card-title">Tools</h4>
+                     
                       <div class="template-demo">
                         <button type="button" class="btn btn-primary">Primary</button>
 			      
