--- a/download/index.html
+++ b/download/index.html
@@ -399,14 +399,14 @@
                       <button type="button" class="btn btn-primary dropdown-toggle dropdown-toggle-split" id="dropdownMenuSplitButton1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         <span class="sr-only">Toggle Dropdown</span>
                       </button>
-                      <div class="dropdown-menu" aria-labelledby="dropdownMenuSplitButton1">
-                        <h6 class="dropdown-header">Settings</h6>
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Separated link</a>
-                      </div>
+<div class="dropdown-menu" aria-labelledby="dropdownMenuSplitButton1">
+<h6 class="dropdown-header">Tools</h6>
+<a class="dropdown-item" href="/convert/github-to-jsdelivr/">GitHub to jsDelivr</a>
+<a class="dropdown-item" href="#">Update</a>
+<a class="dropdown-item" href="#">Update</a>
+<div class="dropdown-divider"></div>
+<a class="dropdown-item" href="#">Update</a>
+</div>
                   
 
                     </div>
